# rust_dlfs

./: .gitignore  Cargo.toml  memo.txt
src/: array_util.rs  functions.rs  io.rs  layers.rs  lib.rs  macros.rs  math.rs  model.rs  optimizer.rs  params.rs  trainer.rs  types.rs  ui.rs  util.rs
src/layers/: loss_layer.rs  mod.rs  negativ_sampling_layer.rs  time_layers.rs
src/model/: mod.rs  rnn.rs  seq2seq.rs
src/train/: ch01.rs  ch03.rs  ch04.rs  ch05.rs  ch06.rs  ch07.rs  ch08.rs  mod.rs
