[package]
name = "dlfs"
version = "0.1.0"
authors = ["KAMOHARA Jun <23qkamohalalalajun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
csv = "1.1"
serde = "1.0.102"
itertools = "0.8.1"
ndarray-stats = "0.3"

[lib]
doctest = false